infra/kubernetes/10-allow-istio-sidecar.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-istio-sidecar
  namespace: cuegrowth
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - podSelector: {}
    ports:
    - protocol: TCP
      port: 15021
    - protocol: TCP
      port: 15090
    - protocol: TCP
      port: 15006
  egress:
  - to:
    - podSelector: {}
    ports:
    - protocol: TCP
      port: 15001
